# GoLite

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildMakefile.sh  run.sh
doc/: milestone1.txt  milestone2.txt
include/: abstractDispatcher.hpp  main.h  main.hpp  pretty.hpp  prettyPrinter.hpp  symbolTable.hpp  tabs.hpp  tree.hpp  typedefs.h  typedefs.hpp
include/ast/: NAbstractAstNode.hpp  NAstNode.hpp  NProgram.hpp  NStatements.hpp
include/ast/Declaration/: NDecFunc.hpp  NDecType.hpp  NDecVar.hpp  NDeclaration.hpp
include/ast/Expression/: NExpArrIdentifier.hpp  NExpBinary.hpp  NExpBuiltin.hpp  NExpFunc.hpp  NExpFuncCall.hpp  NExpIdentifier.hpp  NExpIndexer.hpp  NExpLiteral.hpp  NExpUnary.hpp  NExpression.hpp  enums.hpp
include/ast/Statement/: NStatement.hpp  NStmtAssign.hpp  NStmtBlock.hpp  NStmtBreakContinue.hpp  NStmtDec.hpp  NStmtEmpty.hpp  NStmtExp.hpp  NStmtFor.hpp  NStmtIf.hpp  NStmtIfElse.hpp  NStmtIfElseIf.hpp  NStmtIncDec.hpp  NStmtPrint.hpp  NStmtReturn.hpp  NStmtSwitch.hpp
include/ast/Type/: NType.hpp  NTypeArray.hpp  NTypeIdentifier.hpp
include/prettyPrintPhase/: prettyDispatcher.hpp  prettyPrintPhase.hpp
include/symbolPhase/: symbol.hpp  symbolDefs.hpp  symbolDispatcher.hpp  symbolHelper.hpp  symbolPhase.hpp  symbolPhaseHelper.hpp  symbolTable.hpp
include/symbolPhase/symbols/: constantSymbol.hpp  funcSymbol.hpp  symbol.hpp  (+2 more)
include/typecheckPhase/: typecheckDispatcher.hpp
include/weederPhase/: weederDispatcher.hpp
src/: main.cpp
src/backEnd/: pretty.cpp  prettyPrinter.cpp
src/frontEnd/: golite.l  golite.y  tabs.cpp  tree.hpp
(+123 files in other folders)
